# TrickTrack

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  NOTICE  README.md  build.sh  init.sh  python2.7.patch  tricktrackVersion.h
cmake/: tricktrackCPack.cmake  tricktrackConfig.cmake.in  tricktrackCreateConfig.cmake  tricktrackDoxygen.cmake  tricktrackUninstall.cmake
doc/: CMSSW_sources.md  Doxyfile.in
include/tricktrack/: CACell.h  CAGraph.h  CMCell.h  CMGraph.h  CMGraphUtils.h  CellularAutomaton.h  ChainMaker.h  FKDPoint.h  FKDTree.h  FQueue.h  HitChainMaker.h  HitChainMaker.ipp  HitDoublets.h  RiemannFit.h  SpacePoint.h  TTPoint.h  TrackingRegion.h  TripletFilter.h
profiling/: CMakeLists.txt  plot_profile.py  plot_profile_cm.py  profiling_cm.cpp  profiling_fitter.cpp  tricktrack_profiling_cpuVfoundtracklets.C  tricktrack_profiling_cpuVriemannmatrixsize.C
python/: CMakeLists.txt  LayerGraph.py  Readme.md  TrackML_example.py  pyTT.cpp  python2.7.patch
src/: CMakeLists.txt  CellularAutomaton.cpp  ChainMaker.cpp  HitChainMaker.cpp
src/tricktrack/: CMGraphUtils.cpp  RiemannFit.cpp
tests/: CMakeLists.txt  test_cagraph_class.cpp  test_cmgraph_class.cpp  test_doublet_class.cpp  test_fkdtree.cpp  test_hit_class.cpp  test_integration.cpp  test_integration_noCuts.cpp  test_riemannfit.cpp  test_ttpoint.cpp
tests/integration/: CMakeLists.txt  test_integration.cpp
